feat(js): migrate from Nashorn to Rhino